fixed alignments

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
 * {
@@ -8,18 +9,26 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Oxygen';
-    /* color: white !important; */
 }
 
 html,
-#root,
-.App {
+body {
     width: 100%;
     height: 100%;
+}
+
+body {
     background: linear-gradient(
         102.53deg,
         #ffeafd 4.59%,
         #ffeee5 45.18%,
         #e1f1ff 86.2%
     );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+#root,
+.App {
+    width: 100%;
 }
